Improved and some bugs fixed on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ img {
 .navbar {
   grid-area: navbar;
   padding-top: 10px;
-  display: block;
 }
 
 .hsc-logo {
@@ -99,6 +98,7 @@ img {
   float: right;
   border-radius: 5px;
   margin-right: 10%;
+  object-fit: contain;
 }
 
 .icon-sets {
@@ -144,4 +144,87 @@ img {
   font-weight: bold;
   transition: 0.1s ease-in-out;
   text-decoration: underline;
+}
+
+@media (max-width: 575.98px) {
+  .page {
+    height: auto;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 300px 1fr !important;
+    grid-template-areas:
+      "navbar"
+      "right-area"
+      "left-area";
+    text-align: center;
+    align-items: center;
+    grid-row-gap: 57.5px;
+  }
+  .left-area {
+    line-height: 1.4;
+    padding-left: 0;
+    float: left;
+  }
+  .navbar {
+    text-align: left;
+    float: left;
+    margin: 0;
+    padding: 0;
+  }
+  .landing-image {
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    border-radius: 5px;
+    margin-right: 0;
+    object-fit: contain;
+  }
+  .right-area {
+    width: auto;
+    height: auto;
+    z-index: 1;
+  }
+  .navbar {
+    text-align: center;
+    padding-top: 10px 0 0 0;
+    padding: 0;
+  }
+  .im-burak {
+    font-size: 32px;
+  }
+  .hsc-logo {
+    text-decoration: none;
+    font-size: 32px;
+    font-weight: bold;
+    font-style: italic;
+    color: black;
+    position: relative;
+    z-index: 0;
+  }
+  .hsc-logo::before {
+    content: "HSC";
+    text-decoration: none;
+    font-size: 32px;
+    font-weight: bold;
+    font-style: italic;
+    color: #b6b6b6;
+    position: absolute;
+    right: 3px;
+    z-index: -1;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
+
+@media (min-width: 1200px) {
 }
